<resources>
    <string name="app_name">NetLearn</string>
    <string name="workbench">Workbench</string>
    <string name="library">Library</string>
    <string name="layerNum">Number of layers</string>
    <string name="settings">Settings</string>
    <string name="create_nn">Create</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="learning_hint">Less than 1</string>
    <string-array name="types">
        <item>Digits</item>
        <item>Image</item>
        <item>ImageRGB</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>